--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -4161,8 +4161,109 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Example of a Low-Pass Filter"
+      ],
+      "metadata": {
+        "id": "kfNHt1AXpp8V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Absolutely. Here’s a mathematical description of the low-pass filter design and application you just saw:\n",
+        "\n",
+        "Consider a time-domain signal composed of two sine waves:\n",
+        "\n",
+        "\\begin{align}\n",
+        "x(t) &= \\sin(2\\pi f_1 t) + 0.5 \\sin(2\\pi f_2 t)\n",
+        "\\end{align}\n",
+        "\n",
+        "Where $f_1 = 5 \\, \\text{Hz}$ (low frequency), $f_2 = 50 \\, \\text{Hz}$ (high frequency), $t \\in [0, 1]$ sampled at $f_s = 1000 \\, \\text{Hz}$\n",
+        "\n",
+        "Lets compute the DFT of the signal to transform it to the frequency domain:\n",
+        "\n",
+        "\\begin{align}\n",
+        "X[k] &= \\sum_{n=0}^{N-1} x[n] \\cdot e^{-j 2\\pi kn / N}, \\quad k = 0, 1, \\dots, N-1\n",
+        "\\end{align}\n",
+        "\n",
+        "Where: $N$ number of time samples, $x[n] = x(t_n)$.\n",
+        "\n",
+        "The result $X[k]$ represents the amplitude and phase of the frequency components at:\n",
+        "\n",
+        "\\begin{align}\n",
+        "f_k &= \\frac{k}{N} f_s \\quad \\text{for } k = 0, 1, \\dots, N-1\n",
+        "\\end{align}\n",
+        "\n",
+        "Lets construct a step filter $H[k]$ such that:\n",
+        "\n",
+        "\\begin{align} H[k] &=\n",
+        "\\begin{cases}\n",
+        "1 & \\text{if } |f_k| < f_c \\\\\n",
+        "0 & \\text{otherwise}\n",
+        "\\end{cases}\n",
+        "\\end{align}\n",
+        "\n",
+        "Where $f_c = 15 \\, \\text{Hz}$ is the cutoff frequency.\n",
+        "\n",
+        "The filtered spectrum is:\n",
+        "\n",
+        "\\begin{align}\n",
+        "Y[k] &= X[k] \\cdot H[k]\n",
+        "\\end{align}\n",
+        "\n",
+        "Let us transform the filtered signal back to the time domain using the inverse DFT:\n",
+        "\n",
+        "\\begin{align}\n",
+        "y[n] &= \\frac{1}{N} \\sum_{k=0}^{N-1} Y[k] \\cdot e^{j 2\\pi kn / N}\n",
+        "\\end{align}\n",
+        "\n",
+        "This yields the time-domain filtered signal, which retains the low-frequency components (like the 5 Hz sine wave) and removes high-frequency components (like the 50 Hz sine wave).\n"
+      ],
+      "metadata": {
+        "id": "lcZCIeJTqRDC"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Sampling parameters\n",
+        "fs = 1000  # Sampling frequency (Hz)\n",
+        "t = np.linspace(0, 1, fs, endpoint=False)  # Time vector\n",
+        "\n",
+        "# Create a signal with low and high frequency components\n",
+        "signal = np.sin(2 * np.pi * 5 * t) + 0.5 * np.sin(2 * np.pi * 50 * t)\n",
+        "\n",
+        "# Perform Fourier Transform\n",
+        "ft = np.fft.fft(signal)\n",
+        "frequencies = np.fft.fftfreq(len(t), d=1/fs)\n",
+        "\n",
+        "# Create low-pass filter mask (ideal filter with cutoff at 15 Hz)\n",
+        "cutoff = 15  # Hz\n",
+        "mask = np.abs(frequencies) < cutoff\n",
+        "\n",
+        "# Apply filter in frequency domain\n",
+        "filtered_ft = ft * mask\n",
+        "\n",
+        "# Inverse Fourier Transform to return to time domain\n",
+        "filtered_signal = np.fft.ifft(filtered_ft)\n",
+        "\n",
+        "# Plot original and filtered signals\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "plt.plot(t, signal, label='Original Signal', alpha=0.7)\n",
+        "plt.plot(t, filtered_signal.real, label='Filtered Signal', linewidth=2)\n",
+        "plt.title(\"Low-Pass Filter via Fourier Transform\")\n",
+        "plt.xlabel(\"Time (s)\")\n",
+        "plt.ylabel(\"Amplitude\")\n",
+        "plt.legend()\n",
+        "plt.grid(True)\n",
+        "plt.tight_layout()\n",
+        "plt.show()"
+      ],
       "metadata": {
         "id": "FtejlOB4TvPy"
       },
