--- a/assignments/Mid_Semester_Assessment_ME327_2025.ipynb
+++ b/assignments/Mid_Semester_Assessment_ME327_2025.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6CjXwbGMWGmfzT2Sd3w6X",
+      "authorship_tag": "ABX9TyPh09bn0gSsXJBtsTOamHxx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,6 +46,21 @@
       ],
       "metadata": {
         "id": "EzowKJRVKHZv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You may assume that the pinned-pinned axially loaded beam with dampingis sufficiently accurately described by the solutions of the partial differential equation given by\n",
+        "\n",
+        "\\begin{align}\n",
+        "{{\\partial^2 y} \\over {\\partial t^2}} + C{{\\partial y} \\over {\\partial t}}+\\frac{EI} {\\rho A}{{\\partial^4 y} \\over {\\partial x^4}}+\\frac{P}{\\rho A} {{\\partial^2 y} \\over {\\partial x^2}}&=q(t,x)\n",
+        "\\end{align}\n",
+        "\n",
+        "where $y$ is the transverse displacement of the beam with respect to the mid line, $C$ is the damping coefficient of the system, $P$ is the axial compressive force, $\\rho$ is the density of the material of the beam, and $E$ is the modulus of rigidity, $I$ is the cross sectional moment of inertia, and $A$ is the cross sectional area of the uniform beam. In this section we will consider the case where the axial load is a constant."
+      ],
+      "metadata": {
+        "id": "IMs2cqOfwPAU"
       }
     }
   ]
