--- a/assignments/Basic_Vibration_Modeling.ipynb
+++ b/assignments/Basic_Vibration_Modeling.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyMvkYZ8WfjymgS9f9BlkbAr",
+      "authorship_tag": "ABX9TyN2d8tdT2LKRqk5jt8kFXs6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "DmjHyGvMfX3R"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -153,12 +153,10 @@
         "\n",
         "\n",
         "\n",
-        "Assuming underdaped conditions $0\\leq\\zeta \\leq 1$ it is a straight forward exercise in partial fraction expansion to show that the above expressions reduce to\n",
-        "\n",
+        "For realeasing from rest $\\dot{\\theta}(0)=$ and hence\n",
         "\\begin{align}\n",
-        "\\theta_{IC} (t) &=e^{-\\zeta \\omega_nt}\\left(\\frac{\\dot{\\theta}(0)}{\\omega_d}\\cos{(\\omega_dt-\\pi/2)}+\\frac{\\theta(0)}{\\sqrt{1-\\zeta^2}}\\sin{(\\omega_dt+\\phi_{IC})}\\right)\n",
-        "\\end{align}\n",
-        "where $\\omega_d=\\omega_n\\sqrt{1-\\zeta^2}$, $\\phi_{IC}=\\arcsin\\left({\\sqrt{1-\\zeta^2}}\\right)$"
+        "\\theta(t)&=\\theta(0)\\mathfrak{L}^{-1}\\left\\{\\frac{ s + 2\\zeta \\omega_n}{s^2+2 \\zeta \\omega_n s + \\omega_n^2}\\right\\}.\n",
+        "\\end{align}"
       ],
       "metadata": {
         "id": "_l2wbMfYspLH"
@@ -167,14 +165,97 @@
     {
       "cell_type": "code",
       "source": [
-        "M=75; L=1.5; K=130; C=10; wn=np.sqrt(K/M);\n",
-        "zeta=2*C/wn"
+        "M=75; L=1.5; K=130; C=10; I=M*L**2;\n",
+        "wn=np.sqrt(K/I);\n",
+        "zeta=C/(2*wn)\n",
+        "print(zeta)"
       ],
       "metadata": {
-        "id": "lmWMCy_kvF5x"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lmWMCy_kvF5x",
+        "outputId": "a82a0c21-0ea0-47b2-c500-7cf257228b77"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5.696658939845625\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Delta_s=[1, 2*zeta*wn, wn**2];\n",
+        "np.roots(Delta_s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W3Qp-8lcx9mG",
+        "outputId": "23e75667-d45c-44f1-eb52-5a6c786ea011"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-9.92236017, -0.07763983])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assuming underdaped conditions $0\\leq\\zeta \\leq 1$ it is a straight forward exercise in partial fraction expansion to show that the above expressions reduce to\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\theta_{IC} (t) &=e^{-\\zeta \\omega_nt}\\left(\\frac{\\dot{\\theta}(0)}{\\omega_d}\\cos{(\\omega_dt-\\pi/2)}+\\frac{\\theta(0)}{\\sqrt{1-\\zeta^2}}\\sin{(\\omega_dt+\\phi_{IC})}\\right)\n",
+        "\\end{align}\n",
+        "where $\\omega_d=\\omega_n\\sqrt{1-\\zeta^2}$, $\\phi_{IC}=\\arcsin\\left({\\sqrt{1-\\zeta^2}}\\right)$"
+      ],
+      "metadata": {
+        "id": "Xx-CNk1Zy5xI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wn, zeta"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "5JBjgo4dwdb1",
+        "outputId": "771fdbc7-44d1-4fde-cbc3-65d704a2aa94"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.8777074514725111, 5.696658939845625)"
+            ],
+            "text/latex": "$\\displaystyle \\left( 0.877707451472511, \\  5.69665893984562\\right)$"
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -184,10 +265,27 @@
         "x_IC=np.exp(-zeta*wn*t)*((xdot0/wd)*np.cos(wd*t-np.pi/2)+(x0/(np.sqrt(1-zeta**2)))*np.sin(wd*t+phi_IC))   #np.exp(-zeta*wn*t);"
       ],
       "metadata": {
-        "id": "5GvkbRXRsniJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5GvkbRXRsniJ",
+        "outputId": "05375378-f48f-4ede-b566-e957eace40e4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-29-2962158731.py:1: RuntimeWarning: invalid value encountered in sqrt\n",
+            "  wd=wn*np.sqrt(1-zeta**2); phi_IC=np.arcsin(1-zeta**2); x0=1; xdot0=0;\n",
+            "/tmp/ipython-input-29-2962158731.py:1: RuntimeWarning: invalid value encountered in arcsin\n",
+            "  wd=wn*np.sqrt(1-zeta**2); phi_IC=np.arcsin(1-zeta**2); x0=1; xdot0=0;\n",
+            "/tmp/ipython-input-29-2962158731.py:3: RuntimeWarning: invalid value encountered in sqrt\n",
+            "  x_IC=np.exp(-zeta*wn*t)*((xdot0/wd)*np.cos(wd*t-np.pi/2)+(x0/(np.sqrt(1-zeta**2)))*np.sin(wd*t+phi_IC))   #np.exp(-zeta*wn*t);\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -734,6 +832,60 @@
         "\n",
         "*   Adjusting the damping coefficient to the critical damping value (approx. 296.23 N.m/s) is crucial to optimize the gate's closing performance, ensuring it closes quickly and smoothly without unwanted oscillations.\n",
         "*   Further analysis could investigate the sensitivity of the closing time to small deviations from the critical damping coefficient or explore alternative damping mechanisms if the current brake design is not capable of reaching the optimal damping level.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 80
+        },
+        "id": "debaf1c7",
+        "outputId": "a4111368-9215-47a4-d2a1-ebc7bef1a5fa"
+      },
+      "source": [
+        "import sympy as sp\n",
+        "\n",
+        "# Define symbolic variables\n",
+        "s, t, zeta, omega_n = sp.symbols('s t zeta omega_n', real=True) # Removed positive=True for zeta\n",
+        "\n",
+        "# Define the expression in the s-domain\n",
+        "X_s = (s + 2*zeta*omega_n) / (s**2 + 2*zeta*omega_n*s + omega_n**2)\n",
+        "\n",
+        "# Compute the inverse Laplace transform for zeta > 1\n",
+        "# We can use the Heaviside function to indicate the result is for t > 0\n",
+        "x_t_overdamped = sp.inverse_laplace_transform(X_s, s, t, noconds=True)\n",
+        "\n",
+        "# Display the resulting expression in the time domain\n",
+        "display(x_t_overdamped)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "⎛                 ⎛     ________     ⎞                                         ↪\n",
+              "⎜      -ωₙ⋅t⋅ζ    ⎜    ╱      2      ⎟                                         ↪\n",
+              "⎜ωₙ⋅ζ⋅ℯ       ⋅sin⎝t⋅╲╱  1 - ζ  ⋅│ωₙ│⎠    -ωₙ⋅t⋅ζ    ⎛       _________________ ↪\n",
+              "⎜───────────────────────────────────── + ℯ       ⋅cos⎝ωₙ⋅t⋅╲╱ -(ζ - 1)⋅(ζ + 1) ↪\n",
+              "⎜             ________                                                         ↪\n",
+              "⎜            ╱      2                                                          ↪\n",
+              "⎝          ╲╱  1 - ζ  ⋅│ωₙ│                                                    ↪\n",
+              "\n",
+              "↪   ⎞     \n",
+              "↪   ⎟     \n",
+              "↪ _⎞⎟     \n",
+              "↪  ⎠⎟⋅θ(t)\n",
+              "↪   ⎟     \n",
+              "↪   ⎟     \n",
+              "↪   ⎠     "
+            ],
+            "text/latex": "$\\displaystyle \\left(\\frac{\\omega_{n} \\zeta e^{- \\omega_{n} t \\zeta} \\sin{\\left(t \\sqrt{1 - \\zeta^{2}} \\left|{\\omega_{n}}\\right| \\right)}}{\\sqrt{1 - \\zeta^{2}} \\left|{\\omega_{n}}\\right|} + e^{- \\omega_{n} t \\zeta} \\cos{\\left(\\omega_{n} t \\sqrt{- \\left(\\zeta - 1\\right) \\left(\\zeta + 1\\right)} \\right)}\\right) \\theta\\left(t\\right)$"
+          },
+          "metadata": {}
+        }
       ]
     }
   ]
