--- a/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
+++ b/class-notes/Note_Book_Dynamic_Systems_Vibrations.ipynb
@@ -426,7 +426,7 @@
         "\\begin{align}\n",
         "\\mathfrak{L}\\{f(t)\\}=F(s)=\\frac{N(s)}{(s+\\beta_1)(s+\\beta_2)\\cdots(s+\\beta_k)}.\n",
         "\\end{align}\n",
-        "When $0\\leq\\zeta \\leq 1$ it is a straight forward exercise in partial fraction expansion to show that the above expressions reduce to\n",
+        "When $0\\leq\\zeta < 1$ it is a straight forward exercise in partial fraction expansion to show that the above expressions reduce to\n",
         "\n",
         "\\begin{align}\n",
         "x_{IC} (t) &=e^{-\\zeta \\omega_nt}\\left(\\frac{\\dot{x}(0)}{\\omega_d}\\cos{(\\omega_dt-\\pi/2)}+\\frac{x(0)}{\\sqrt{1-\\zeta^2}}\\sin{(\\omega_dt+\\phi_{IC})}\\right),\\\\\n",
