--- a/assignments/Basic_Vibration_Modeling.ipynb
+++ b/assignments/Basic_Vibration_Modeling.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyNysZR2BVMAZ5aUDbQbNGwQ",
+      "authorship_tag": "ABX9TyNGfE7yT3lvC5zwoOYP3l0c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -558,6 +558,116 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## c) If Damping is negligible estimate $K$"
+      ],
+      "metadata": {
+        "id": "p-kstugmh4xG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If the damping is negligible from the above expression we have that\n",
+        "$\\sqrt{\\frac{K}{M}}=\\omega_n\\approx \\omega_r\\approx 2\\pi f$ where $M=0.01$. Thus\n",
+        "\\begin{align}\n",
+        "K\\approx M\\omega_r^2 \\approx M(2\\pi f)^2\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "MSE97_qkiFxb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M=0.01\n",
+        "K=M*omega_r**2\n",
+        "print(K)"
+      ],
+      "metadata": {
+        "id": "BPh5D_eOiCSy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The cantelever spring constant is:\n",
+        "$K\\approx 994.3 \\, kN/m$"
+      ],
+      "metadata": {
+        "id": "e7CJseyrjH92"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QpGbsCwmjHf8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## d) Failiure time"
+      ],
+      "metadata": {
+        "id": "SZGEqGSQk5Uh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For this we assume no damping and $\\omega=\\omega_n$. Then\n",
+        "\n",
+        "\\begin{align}\n",
+        "x_{ss}(t) = \\mathfrak{L}^{-1} \\left\\{ \\frac{F_0 s / M}{(s^2 + \\omega_n^2)^2} \\right\\}\n",
+        "\\end{align}\n",
+        "\n",
+        "Using the identity (from Laplace tables):\n",
+        "\n",
+        "\\begin{align}\n",
+        "x_{ss}(t) = \\mathfrak{L}^{-1} \\left\\{ \\frac{s}{(s^2 + \\omega_n^2)^2} \\right\\} = \\frac{t}{2\\omega_n} \\sin(\\omega_nt)\n",
+        "\\end{align}\n",
+        "\n",
+        "If the max amplitude before failiure is $x_{max}$ we have\n",
+        "\n",
+        "\\begin{align}\n",
+        "t_{failure}=2\\omega_nx_{max}\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "Fi2yLh6Rk_TC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_max=0.01\n",
+        "t_fail=2*omega_r*x_max\n",
+        "print(t_fail)"
+      ],
+      "metadata": {
+        "id": "8nC20dSCmGfx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Time to failure is approximately 200 seconds"
+      ],
+      "metadata": {
+        "id": "NYlqP7sgmUK1"
+      }
     }
   ]
 }
