--- a/assignments/Basic_Vibration_Modeling.ipynb
+++ b/assignments/Basic_Vibration_Modeling.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyNGfE7yT3lvC5zwoOYP3l0c",
+      "authorship_tag": "ABX9TyP3Q+AU2Zr3dw+TPQxfb86F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -667,6 +667,221 @@
       ],
       "metadata": {
         "id": "NYlqP7sgmUK1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Question3"
+      ],
+      "metadata": {
+        "id": "pick-I5Kmikc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Meeswin engineering are bidding for a contract to build offshore wind turbines. They are proposing a new method for the\n",
+        "construction of the mounting for the turbine tower on the sea floor, that involves pounding $500\\,kg$ concrete blocks into the\n",
+        "sea bed. The industrial hammer (which is basically a 50kg block) which is used to do this is designed so that on every\n",
+        "strike, all of its kinetic energy is transferred to the concrete block.\n",
+        "The sea bed is such that it can be modelled as a spring and a damper, with stiffness $k = 20k\\,N/m$, and a damping ratio\n",
+        "$\\zeta = 0.1$.\n",
+        "Meeswin need to ensure that the force exerted on the sea bed does not exceed $F_{max} = 600\\,N$, to avoid irreversible\n",
+        "ecological damage. Your tasks are:\n",
+        "\n",
+        "* a. Devise a model for this setup, and sketch a diagram identifying the key components and coefficients.\n",
+        "* b. Produce the mathematical model for this setup.\n",
+        "* c. Solve this mathematical model for the maximum hammer speed that can be used while limiting the force exerted on\n",
+        "the sea bed to an acceptable level.\n",
+        "* d. Produce a pdf file called q3.pdf containing your sketch, mathematical model, and solution, and upload it as part of your\n",
+        "submission."
+      ],
+      "metadata": {
+        "id": "PKlZqi4Umx6a"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##b) Mathematical model of the problem"
+      ],
+      "metadata": {
+        "id": "kclQeBRdo0IJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Issue with statement:** '..all of its kinetic energy is transferred to the concrete block'"
+      ],
+      "metadata": {
+        "id": "8IXbh1oku7jT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If one assumes \tAll of the hammer's kinetic energy is transferred to the block then necessarily the hammer comes to rest after the collision. But if that is the case conservation of momentum is violated unless the hammer and the block are both of the same mass. Thus this can not happen. **Therefore we will solve the problem by assuming a perfectly inelastic collision, where the hammer and concrete block stick together and move as a single body immediately after impact.**"
+      ],
+      "metadata": {
+        "id": "Inf7l9PbvCoj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Modelling the sea bed+concrete block as a mass-spring-damper system impacted by a falling hammer. The second-order differential equation governing such a system under a forcing function $F(t)$ is:\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\ddot{x}(t) + 2\\zeta \\omega_n \\dot{x}(t) + \\omega_n^2 x(t) = \\frac{1}{M}F(t)\n",
+        "\\end{align}\n",
+        "\n",
+        "Where: $x(t)$ is the displacement of the $500\\,kg$ concrete block+hammer (blocak mass $M = 500\\, \\text{kg}$, hammer mass $m = 50\\, \\text{kg},)$, $\\zeta = 0.1$ is the damping ratio, $k = 20000\\, \\text{N/m} \\Rightarrow \\omega_n = \\sqrt{\\frac{k}{M+m}}$, $F(t)$ is the external force applied by the $m=50\\,kg$ hammer via impulse.\n",
+        "\n",
+        "Given that the hammer strike is instantaneous and delivers an impulse $J = m v$, the forcing term F(t) can be modeled using the Dirac delta function:\n",
+        "\n",
+        "\\begin{align}\n",
+        "F(t) = m v\\, \\delta(t)\n",
+        "\\end{align}\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RTlJiryTo49O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## c) Solve this mathematical model for the maximum hammer speed"
+      ],
+      "metadata": {
+        "id": "YqwPUYJf9VLW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The impulse response of this system is\n",
+        "\\begin{align}\n",
+        "x(t) = \\frac{mv}{(M+m)\\omega_d} e^{-\\zeta \\omega_n t} \\sin(\\omega_d t)= \\frac{v_0}{\\omega_d} e^{-\\zeta \\omega_n t} \\sin(\\omega_d t)\n",
+        "\\end{align}\n",
+        "where $\\omega_d = \\omega_n \\sqrt{1 - \\zeta^2}$ and $v_0=\\frac{mv}{(M+m)}$.\n",
+        "\n",
+        "The force exerted to the sea bed is\n",
+        "\\begin{align}\n",
+        "F_{\\text{exerted}} &=-kx-c\\dot{x}\\\\\n",
+        " &= -k \\left( \\frac{v_0}{\\omega_d} e^{-\\zeta \\omega_n t} \\sin(\\omega_d t) \\right)\n",
+        "\t-\tc \\left( v_0 e^{-\\zeta \\omega_n t} \\left[ \\cos(\\omega_d t) - \\frac{\\zeta \\omega_n}{\\omega_d} \\sin(\\omega_d t) \\right] \\right)\\\\\n",
+        "&= -v_0 e^{-\\zeta \\omega_n t} \\left[\n",
+        "\\left( \\frac{k}{\\omega_d} - c \\frac{\\zeta \\omega_n}{\\omega_d} \\right) \\sin(\\omega_d t) + c \\cos(\\omega_d t)\n",
+        "\\right] \\\\\n",
+        "&=\n",
+        "-v_0\\, e^{-\\zeta \\omega_n t} \\left[\n",
+        "\\left( \\frac{k - c \\zeta \\omega_n}{\\omega_d} \\right) \\sin(\\omega_d t)\n",
+        "\t-\tc \\cos(\\omega_d t)\n",
+        "\\right]\\\\\n",
+        "& = -v_0 R e^{-\\zeta \\omega_n t} \\sin(\\omega_d t + \\phi)\n",
+        "\\end{align}\n",
+        "\n",
+        "where\n",
+        "\\begin{align}\n",
+        "R &= \\sqrt{\\frac{k^2 (1 - 2\\zeta^2)^2}{\\omega_d^2} + 4 \\zeta^2 k (M + m)}\\\\\n",
+        "\\phi &= \\tan^{-1}\\left(\n",
+        "\\frac{2 \\zeta \\omega_d \\sqrt{k(M + m)}}{k(1 - 2\\zeta^2)}\n",
+        "\\right)\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "URi60O0iyQIP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Where $t_{\\text{peak}}$ is when $\\sin(\\omega_d t + \\phi) = -1$, i.e.,\n",
+        "\n",
+        "\\begin{align}\n",
+        "\\omega_d t_{\\text{peak}} + \\phi = \\frac{3\\pi}{2} \\Rightarrow t_{\\text{peak}} = \\frac{3\\pi/2 - \\phi}{\\omega_d}\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "4LZ25-g85i4E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thus\n",
+        "\\begin{align}\n",
+        "F_{\\text{max}} &= v_0 R \\cdot e^{-\\zeta \\omega_n t_{\\text{peak}}}\\\\\n",
+        "& = v_0 R \\cdot \\exp\\left( -\\zeta \\omega_n \\cdot \\frac{3\\pi/2 - \\phi}{\\omega_d} \\right)\\\\\n",
+        "& = \\frac{m}{M + m} v \\cdot \\sqrt{ \\frac{k^2 (1 - 2\\zeta^2)^2}{\\omega_d^2} + 4 \\zeta^2 k (M + m) } \\cdot \\exp\\left( -\\zeta \\omega_n \\cdot \\frac{3\\pi/2 - \\tan^{-1} \\left( \\frac{2 \\zeta \\omega_d \\sqrt{k(M + m)}}{k (1 - 2\\zeta^2)} \\right) }{\\omega_d} \\right)\n",
+        "\\end{align}\n",
+        "So the maximum force exerted on the seabed is approximately linear in velocity."
+      ],
+      "metadata": {
+        "id": "271aok6t6lVG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy as sp\n",
+        "\n",
+        "# Define symbols\n",
+        "v = sp.Symbol('v', real=True, positive=True)\n",
+        "m, M, k, zeta = sp.symbols('m M k zeta', real=True, positive=True)\n",
+        "\n",
+        "# Intermediate quantities\n",
+        "omega_n = sp.sqrt(k / (M + m))\n",
+        "omega_d = omega_n * sp.sqrt(1 - zeta**2)\n",
+        "v0 = (m / (M + m)) * v\n",
+        "\n",
+        "# Simplify A and B\n",
+        "A = (k * (1 - 2 * zeta**2)) / omega_d\n",
+        "B = 2 * zeta * omega_n * (M + m)\n",
+        "\n",
+        "# Amplitude R\n",
+        "R = sp.sqrt(A**2 + B**2)\n",
+        "\n",
+        "# Phase angle phi\n",
+        "phi = sp.atan(B / A)\n",
+        "\n",
+        "# t_peak and exponential decay\n",
+        "t_peak = (3 * sp.pi / 2 - phi) / omega_d\n",
+        "decay = sp.exp(-zeta * omega_n * t_peak)\n",
+        "\n",
+        "# Final expression for F_max\n",
+        "F_max = v0 * R * decay\n",
+        "\n",
+        "# Optional: substitute numerical values\n",
+        "params = {\n",
+        "    m: 50,\n",
+        "    M: 500,\n",
+        "    k: 20000,\n",
+        "    zeta: 0.1\n",
+        "}\n",
+        "\n",
+        "F_max_numeric = F_max.subs(params).simplify()\n",
+        "\n",
+        "# Print symbolic expression in terms of v\n",
+        "print(\"F_max(v) =\")\n",
+        "sp.pprint(F_max_numeric)"
+      ],
+      "metadata": {
+        "id": "PLNa-Qcy5hy-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So the maximum force exerted to the sea bed is $F_{\\text{max}}(v) \\approx 192.6 \\cdot v$. Since $F_{\\text{max}}=600\\,N$ we have $v_max\\approx 600/192.6\\,m/s=3.12 \\,m/s$"
+      ],
+      "metadata": {
+        "id": "5WM3JoEt8RRT"
       }
     }
   ]
