--- a/assignments/Basic_Vibration_Modeling.ipynb
+++ b/assignments/Basic_Vibration_Modeling.ipynb
@@ -26,7 +26,7 @@
         "bpFso7jJAdWq",
         "aA7VldZyCYUy"
       ],
-      "authorship_tag": "ABX9TyPA2kQrVwoR5/KCfPxWGeG6",
+      "authorship_tag": "ABX9TyMmWa3A2m2AUZVnEm4S0Jne",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "DmjHyGvMfX3R"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -214,7 +214,7 @@
         "id": "lmWMCy_kvF5x",
         "outputId": "e99c23e2-01ec-40d3-f44b-d3c36060eb41"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "id": "W3Qp-8lcx9mG",
         "outputId": "1e2b7b79-c66c-4b92-e5ee-0f6be49802e5"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
         "id": "5GvkbRXRsniJ",
         "outputId": "c8aa80d8-90e8-4555-bea5-c89a1c7c8fac"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -388,7 +388,7 @@
         "id": "3JOEKZknX5sG",
         "outputId": "a5934fa8-81b6-42bf-97a5-68ef361067af"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -462,7 +462,7 @@
         "id": "MBFj3UNBZ5d_",
         "outputId": "112e4f96-20ff-40af-f9a4-89956262f8c0"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,14 +491,58 @@
         "\\end{align}\n",
         "\\begin{align}\n",
         "e^{-\\omega_n t_s} (1 + \\omega_n t_s)=1/30\n",
-        "\\end{align}\n",
-        "The approximate solution of this is\n",
+        "\\end{align}"
+      ],
+      "metadata": {
+        "id": "-C4ZhfXOaVpr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scipy.optimize import fsolve\n",
+        "\n",
+        "# Define the equation e^(-x)(1 + x) = 1/30\n",
+        "def equation(x):\n",
+        "    return np.exp(-x) * (1 + x) - 1/30\n",
+        "\n",
+        "# Initial guess\n",
+        "x0 = 2.0\n",
+        "\n",
+        "# Solve for x = omega_n * t_s\n",
+        "x_solution = fsolve(equation, x0)[0]\n",
+        "\n",
+        "print(f\"Approximate solution for ωₙ·tₛ: {x_solution:.6f}\")"
+      ],
+      "metadata": {
+        "id": "RZqxzUZfdZdN",
+        "outputId": "5fdef5d0-6cb6-4882-adaa-c70f4bd38d77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Approximate solution for ωₙ·tₛ: 5.230683\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From the above calcultion the approximate solution for t_s is\n",
         "\\begin{align}\n",
         "t_s \\approx \\frac{5.2307}{\\omega_n}=5.2307\\sqrt{\\frac{I}{K}}\n",
         "\\end{align}"
       ],
       "metadata": {
-        "id": "-C4ZhfXOaVpr"
+        "id": "TmFj30midlYN"
       }
     },
     {
@@ -514,7 +558,7 @@
         "id": "4vw7_YWzbsZ8",
         "outputId": "444ecc6b-37e5-4d17-e083-638539168543"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,7 +745,7 @@
         "id": "uS8UnjtvhcMv",
         "outputId": "b8779203-fab2-40ce-bad7-9c123705cd61"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +792,7 @@
         "id": "BPh5D_eOiCSy",
         "outputId": "a41f8903-775f-439e-941a-180ff046c672"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +861,7 @@
         "id": "8nC20dSCmGfx",
         "outputId": "769c7a0d-a280-40d1-ef5e-9d73bf45b598"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1044,7 +1088,7 @@
         "id": "PLNa-Qcy5hy-",
         "outputId": "72547ac2-c554-4ec2-f017-a5a38a5b7f36"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
