--- a/answers-to-selected-assignments/Mid_Semester_Assessment_Answers_ME327_2025.ipynb
+++ b/answers-to-selected-assignments/Mid_Semester_Assessment_Answers_ME327_2025.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "3msdvsIEOPdz"
       },
@@ -231,7 +231,7 @@
         "\\end{align}\n",
         "and that the maximum amplitude of vibration is given by\n",
         "\\begin{align}\n",
-        "{y_{ss}}_{max}=\\frac{f_0\\sin(k\\pi/2)}{L\\zeta_k\\omega_k^2\\sqrt{1-\\zeta_k^2}}.\n",
+        "{y_{ss}}_{k_{max}}=\\frac{f_0\\sin(k\\pi/2)}{L\\zeta_k\\omega_k^2\\sqrt{1-\\zeta_k^2}}.\n",
         "\\end{align}\n"
       ],
       "metadata": {
@@ -241,6 +241,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Since the measurements are avaialbe only for the first two non-trivial modes of vibration we can approximate the system yesponse of the beam by:\n",
         "\\begin{align}\n",
         "y(t, x) \\approx \\chi_1(\\omega) \\cos\\left(\\omega t + \\phi_1(\\omega)\\right) \\sin{\\left(\\frac{\\pi x}{L}\\right)}+\\chi_3(\\omega) \\cos\\left(\\omega t + \\phi_3(\\omega)\\right) \\sin{\\left(\\frac{3\\pi x}{L}\\right)}\n",
         "\\end{align}\n",
@@ -263,15 +264,6 @@
       "metadata": {
         "id": "cqwl4pxbumnk"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "WuPiq5mpujtK"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -299,7 +291,7 @@
       "metadata": {
         "id": "LdMxPAUoK-DL"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -337,7 +329,7 @@
       "metadata": {
         "id": "z0-Q_9SzkTdM"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +356,7 @@
         "id": "wZpO_A8cKFtp",
         "outputId": "8c0b66cb-9093-4c11-c8f2-e280c83753ab"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -415,7 +407,7 @@
       "metadata": {
         "id": "VH7JeFcoLSQl"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -442,7 +434,7 @@
         "id": "ARzpj1VPKPvQ",
         "outputId": "b493154e-1c67-464f-9383-db7e610672bd"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -493,7 +485,7 @@
       "metadata": {
         "id": "n7QrwCJnLaPP"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -570,7 +562,7 @@
       "metadata": {
         "id": "GfDy6SPYKaPZ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +589,7 @@
         "id": "OxybQUoHlLCY",
         "outputId": "ccdd0895-2fc6-47bc-9797-31789eb7aa44"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -664,7 +656,7 @@
         "id": "qiaKJ9tGmIyT",
         "outputId": "b3e02c7e-2aae-43a2-dc59-b5d7e60dc81a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -786,7 +778,7 @@
       "metadata": {
         "id": "Yv2wfeItpPqq"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -826,7 +818,7 @@
         "id": "ziLs8EXx0Cjj",
         "outputId": "d790a03b-103f-4610-ec9a-5fab102ab08e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -851,7 +843,7 @@
         "id": "_6GuK0Nx9-ss",
         "outputId": "8076e7c1-ee51-44b1-e032-3773cebd5475"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +881,7 @@
       "metadata": {
         "id": "dEJZv3MB9tHu"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -931,7 +923,7 @@
       "metadata": {
         "id": "sGrthUgPoLhB"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -982,7 +974,7 @@
         "id": "n6Z_KrDQlBlt",
         "outputId": "288c226c-768b-4952-af52-861ed09f9927"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1021,7 +1013,7 @@
         "id": "5Z1l86MBoDSx",
         "outputId": "a10ddb44-ead2-4316-d325-2fb8b9ee005c"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,7 +1058,7 @@
         "id": "qZVTGIvgIE9i",
         "outputId": "e4f11fcb-2dcc-4d2b-caea-a6eb7a503f9a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1183,7 +1175,7 @@
         },
         "outputId": "2309a9fc-d8da-498d-fe84-ebdf4e1617ae"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1217,7 +1209,7 @@
         "id": "5Htbg9XrB0Ks",
         "outputId": "969ca590-d49f-45d9-eb85-f63ce6f28960"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1368,7 +1360,7 @@
         "id": "ALWLCbtrCBlS",
         "outputId": "90cd6b4d-87ae-4aaa-f96b-148ac906e76a"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
